--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- prueba de cambios -->
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/Titulo"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_height="60dp"
         android:background="@drawable/ic_launcher_background"
         android:gravity="center"
         android:text="Calculadora"
@@ -20,6 +20,7 @@
 
     <TextView
         android:id="@+id/Operacion"
+        android:layout_below="@id/Titulo"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:gravity="right"
@@ -29,6 +30,7 @@
 
     <TextView
         android:id="@+id/Resultado"
+        android:layout_below="@id/Operacion"
         android:layout_width="wrap_content"
         android:layout_height="150dp"
         android:gravity="left"
@@ -38,6 +40,7 @@
 
     <TableLayout
         android:id="@+id/Tabla"
+        android:layout_below="@id/Resultado"
         android:layout_width="413dp"
         android:layout_height="345dp"
         tools:layout_editor_absoluteX="-2dp"
@@ -190,4 +193,4 @@
 
     </TableLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
